# JudgeThreadd

./: .pyproject.toml  LICENSE  README.md
app/agent/: baseline_rag.py  ingestion.py
backend/: pyproject.toml
