[project]
name = "judgethreadd"
version = "0.1.0"
description = ""
authors = [
    {name = "Ian Steffy",email = "ian.steffy@smart-cybersecurity.de"}
]
requires-python = ">=3.10,<4.0.0"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "langchain (>=1.2.13,<2.0.0)",
    "langchain-groq (>=1.1.2,<2.0.0)",
    "langgraph (>=1.1.3,<2.0.0)",
    "qdrant-client (>=1.17.1,<2.0.0)",
    "sentence-transformers (>=5.3.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
